feat: add CLI launcher for opening mdcat from terminal

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "mdcat",
   "private": true,
+  "bin": {
+    "mdcat": "cli.ts"
+  },
   "version": "0.1.0",
   "type": "module",
   "scripts": {
