--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,6 +13,8 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
 tauri-plugin-fs = "2"
+notify = { version = "7", features = ["macos_fsevent"] }
+notify-debouncer-mini = "0.5"
 tauri-plugin-cli = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-opener = "2"
