--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
+    "install:app": "bun cli.ts install",
     "test": "vitest run",
     "test:watch": "vitest"
   },
