--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-fs": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2.5.3",
+    "beautiful-mermaid": "^1.1.3",
     "codemirror": "^6.0.1",
     "github-markdown-css": "^5.8.1",
     "highlight.js": "^11.11.1",
-    "marked": "^15.0.6",
-    "marked-highlight": "^2.2.1"
+    "marked": "^15.0.6"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.2.3",
